Fix text align for narrow screens

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -369,6 +369,7 @@ form {
 .nav__entry {
   display: none;
   margin: 5px;
+  text-align: right;
 }
 
 .nav__entry--2ndary {
